--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body{
     background-color: #FDFEFE;
 }
 .menu{
-    position: absolute;
+    position: fixed;
     z-index: 100;
     width: 100%;
     padding: 10px 20px 10px 20px;
